fixed extra spaces

--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,10 @@ p.lead {
     padding: 80px 0;
 }
 
+.section2 {
+  padding-top: 60px;
+}
+
 .section-title {
     text-align: center;
     margin-bottom: 3rem;
